<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@mipmap/logo_big"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="200dp"
        android:alpha="0.5"
        android:background="@drawable/abc_popup_background_mtrl_mult"
        tools:ignore="PrivateResource">

        <EditText
            android:id="@+id/edit_phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:digits="123456789.@zxcvbnmlkjhfgdsaqwertyuiopQWERTYUIOPASDFGHJKLZXCVBNM"
            android:drawableLeft="@mipmap/signin_phone"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/signin_phone"
            android:hint="@string/phonenum"
            android:padding="8sp"
            android:singleLine="true"
            android:textSize="15sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout2"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="33dp"
        android:alpha="0.5"
        android:background="@drawable/abc_popup_background_mtrl_mult"
        tools:ignore="PrivateResource">

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="8.5"
            android:background="@null"
            android:digits="123456789.@zxcvbnmlkjhfgdsaqwertyuiopQWERTYUIOPASDFGHJKLZXCVBNM"
            android:drawableLeft="@mipmap/signin_password"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/signin_password"
            android:hint="@string/password"
            android:padding="8sp"
            android:password="true"
            android:singleLine="true"
            android:textSize="15sp"
            tools:ignore="Deprecated,TextFields" />

        <ImageView
            android:padding="8dp"
            android:id="@+id/ss_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="center"
            android:src="@mipmap/see_passwd"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/logo"
        android:layout_alignRight="@+id/logo"
        android:layout_below="@+id/relativeLayout5"
        android:layout_marginTop="12dp"
        android:text="@string/forgot_password"
        android:textColor="@color/Whilt"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/forget_password"
        android:layout_alignBottom="@+id/forget_password"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:layout_toEndOf="@+id/forget_password"
        android:layout_toRightOf="@+id/forget_password"
        android:text="@string/line"
        android:textColor="@color/Whilt"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView3"
        android:layout_alignBottom="@id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/textView3"
        android:layout_toRightOf="@id/textView3"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textColor="#E9CF07"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout5"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="45dp"
        android:alpha="0.8"
        >

        <Button
            android:background="@color/login_button"
            android:layout_margin="8dp"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/Whilt"
            android:textSize="15sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/abc_scrubber_track_mtrl_alpha"
        android:textColor="@color/Whilt"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/tip"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tip"
        android:layout_marginEnd="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="23dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/WX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/wx_image_description"
            android:src="@mipmap/weixin_logo" />

        <ImageView
            android:id="@+id/QQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/qq_image_description"
            android:src="@mipmap/qq_logo" />

        <ImageView
            android:id="@+id/WB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/wb_image_description"
            android:src="@mipmap/weibo_logo" />

    </LinearLayout>


</RelativeLayout>