<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_backgroud"
    tools:context="com.tashi.testcalabash.activity.P_registerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarPopupTheme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/p_register"
                android:textColor="@color/login_color"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/back_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/back"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linear_layout_set"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/toolbar2"
        android:layout_marginEnd="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="80dp"
        android:divider="@drawable/line_decoration"
        android:showDividers="middle"
        android:dividerPadding="0.5dp"
        android:orientation="vertical"
        android:weightSum="2">


        <EditText
            android:id="@+id/reset_ac_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:inputType="text"
            android:background="@null"
            android:hint="@string/user_name_log"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="@color/register_hint"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/reset_ac_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/new_pwd"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHint="@color/register_hint"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/easy_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_set"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="78dp"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="60dp"
        android:background="#8C8C8C"
        android:text="@string/p_register"
        android:textColor="@color/Whilt"
        android:textSize="17sp" />

</RelativeLayout>
