<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@mipmap/personal_top_bg"
        android:padding="10dp"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/head"
            android:src="@mipmap/ic_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_marginTop="45dp"
            android:id="@+id/name_exp"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/head"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_toEndOf="@id/head"
            android:layout_marginStart="20dp"
            >
            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/user_name"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    tools:text="user_name"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src=""/>-->
                <!--TODO:设置性别图片-->

            </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/grade"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/personal_grade_bg"
                />

        </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/followed_following"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    />
                <TextView
                    android:id="@+id/following_num"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="数量"
                    android:layout_marginStart="8dp" />
                <TextView
                    android:id="@+id/divider"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ing_ed_divider"
                    android:layout_marginStart="8dp" />
                <TextView
                    android:id="@+id/followed"
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followed"

                    android:layout_marginLeft="8dp" />
                <TextView
                    android:id="@+id/followed_num"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="数量"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>